# imgui

./: .gitignore  .pre-commit-config.yaml  API.md  CMakeLists.txt  Doxyfile  Kconfig  README.md  idf_component.yml  imgui_esp_config.h  imgui_port_esp_lcd.cpp  project_include.cmake
.github/workflows/: upload_component.yml
bsp/bsp_waveshare_esp32p4_module_dev_kit/: CMakeLists.txt  bsp_waveshare.c  idf_component.yml
bsp/bsp_waveshare_esp32p4_module_dev_kit/include/bsp/: display.h  esp-bsp.h
examples/imgui_reload/: CMakeLists.txt  sdkconfig.defaults
examples/imgui_reload/components/app_ui/: CMakeLists.txt  app_ui.cpp
examples/imgui_reload/main/: CMakeLists.txt  idf_component.yml  imgui_reload_main.cpp
examples/imgui_reload_qemu/: CMakeLists.txt  conftest.py  partitions.csv  pytest.ini  pytest_imgui_reload.py  sdkconfig.defaults
examples/imgui_reload_qemu/components/app_ui/: app_ui.cpp
examples/imgui_reload_qemu/main/: CMakeLists.txt  idf_component.yml  imgui_reload_main.cpp
include/: imgui_port_esp_lcd.h
softraster/: barycentric.h  color.h  defines.h  pie_opt.c  pie_opt.h  softraster.h  texture.h  utils.h
test_apps/perf/: CMakeLists.txt  decode_framebuffer.py  pytest.ini  pytest_perf.py  sdkconfig.defaults
test_apps/perf/main/: CMakeLists.txt  idf_component.yml  perf_main.cpp
test_apps/qemu_test/: .gitignore  CMakeLists.txt  README.md  pytest_imgui.py
test_apps/qemu_test/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  imgui_main.cpp
tools/: font_compress.py  pytest.ini  test_font_compress.py
(+4 files in other folders)
